@@ -21,19 +21,18 @@
 
 package org.apache.tiles.request.locale;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.JarURLConnection;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.util.Locale;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.io.*;
+import java.net.*;
+import java.util.HashMap;
+import java.util.Locale;
+import java.util.Map;
+import java.util.jar.Manifest;
+
+import static java.lang.Boolean.FALSE;
+import static java.lang.Boolean.TRUE;
 
 /**
  * A {@link PostfixedApplicationResource} that can be accessed through a URL.
@@ -43,67 +42,126 @@ import org.slf4j.LoggerFactory;
 
 public class URLApplicationResource extends PostfixedApplicationResource {
     private static final Logger LOG = LoggerFactory.getLogger(URLApplicationResource.class);
+    private static final Map<String, Boolean> CHECK_BUNDLE_CACHE = new HashMap<String, Boolean>();
 
-    /** the URL where the contents can be found. */
+    /**
+     * the URL where the contents can be found.
+     */
     private URL url;
-    /** if the URL matches a file, this is the file. */
+    /**
+     * if the URL matches a file, this is the file.
+     */
     private File file;
+    /**
+     * if the URL points into an OSGi bundle, this is true
+     */
+    private boolean bundle;
 
     /**
      * Creates a URLApplicationResource for the specified path that can be accessed through the specified URL.
      *
      * @param localePath the path including localization.
-     * @param url the URL where the contents can be found.
+     * @param url        the URL where the contents can be found.
      */
     public URLApplicationResource(String localePath, URL url) {
         super(localePath);
         this.url = url;
         if ("file".equals(url.getProtocol())) {
             file = getFile(url);
+        } else {
+            bundle = checkBundle(url);
         }
     }
 
     /**
      * Creates a URLApplicationResource for the specified path that can be accessed through the specified URL.
      *
-     * @param path the path excluding localization.
+     * @param path   the path excluding localization.
      * @param locale the Locale.
-     * @param url the URL where the contents can be found.
+     * @param url    the URL where the contents can be found.
      */
     public URLApplicationResource(String path, Locale locale, URL url) {
         super(path, locale);
         this.url = url;
         if ("file".equals(url.getProtocol())) {
             file = getFile(url);
+        } else {
+            bundle = checkBundle(url);
         }
     }
 
-    private static File getFile(URL url) {
-    	try {
-			return new File(new URI(url.toExternalForm()).getSchemeSpecificPart());
-		} catch (URISyntaxException e) {
-			LOG.debug("Cannot translate URL to file name, expect a performance impact", e);
-			return null;
-		}
+    private synchronized static boolean checkBundle(URL url) {
+        final String protocol = url.getProtocol();
+        Boolean bundle = CHECK_BUNDLE_CACHE.get(protocol);
+
+        if (bundle == null) {
+            try {
+                URL manifestUrl = new URL(url.toExternalForm().replace(url.getFile(), "/META-INF/MANIFEST.MF"));
+                InputStream in = manifestUrl.openStream();
+                try {
+                    bundle = new Manifest(in).getMainAttributes().getValue("Bundle-SymbolicName") != null ? TRUE : FALSE;
+                } finally {
+                    try {
+                        in.close();
+                    } catch (IOException e) {
+                        LOG.debug("Manifest could not be closed properly", e);
+                    }
+                }
+            } catch (IOException e) {
+                LOG.debug("No manifest found", e);
+                bundle = FALSE;
+            }
+
+            CHECK_BUNDLE_CACHE.put(protocol, bundle);
+        }
+
+        return bundle.booleanValue();
     }
-    
-    /** {@inheritDoc} */
+
+    private static File getFile(URL url) {
+        try {
+            return new File(new URI(url.toExternalForm()).getSchemeSpecificPart());
+        } catch (URISyntaxException e) {
+            LOG.debug("Cannot translate URL to file name, expect a performance impact", e);
+            return null;
+        }
+    }
+
+    private URLConnection openConnection() throws IOException {
+        try {
+            return url.openConnection();
+        } catch (IOException e) {
+            // If the url points into a bundle but the resource cannot be
+            // opened means, that the resource actually does not exist. In this
+            // case throw a FileNotFoundException, see
+            if (bundle) {
+                throw new FileNotFoundException(url.toString());
+            }
+            throw e;
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public InputStream getInputStream() throws IOException {
         if (file != null) {
             return new FileInputStream(file);
         } else {
-            return url.openConnection().getInputStream();
+            return openConnection().getInputStream();
         }
     }
 
-    /** {@inheritDoc} */
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public long getLastModified() throws IOException {
         if (file != null) {
             return file.lastModified();
         } else {
-            URLConnection connection = url.openConnection();
+            URLConnection connection = openConnection();
             if (connection instanceof JarURLConnection) {
                 return ((JarURLConnection) connection).getJarEntry().getTime();
             } else {
@@ -113,17 +171,19 @@ public class URLApplicationResource extends PostfixedApplicationResource {
         }
     }
 
-    /** {@inheritDoc} */
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public String toString() {
         return "Resource " + getLocalePath() + " at " + url.toString();
     }
 
-    protected URL getURL(){
+    protected URL getURL() {
         return url;
     }
 
-    protected File getFile(){
+    protected File getFile() {
         return file;
     }
 }
